@@ -1,5 +1,7 @@
 2005-11-08  Don Porter  <dgp@users.sourceforge.net>
 
+        * tests/expr.test:      Portable tests expr-46.13-18 [Bug 1341368]
+
 	* generic/tclPkg.c:	Corrected inconsistencies in the value returned
 	* tests/pkg.test:	by Tcl_PkgRequire(Ex) so that the returned
 	values will always agree with what is stored in the package database.
